@@ -138,6 +138,13 @@ sub format_datetime
 
 Tomáš Znamenáček, zoul@fleuron.cz
 
+=head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2010 by Tomáš Znamenáček, zoul@fleuron.cz
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
 =cut
 
 'SDG';
